--- a/templates/all_quizes.html
+++ b/templates/all_quizes.html
@@ -8,7 +8,6 @@
 
 <h1 align="center" >Welcome to our Quizes Page</h1>
 
-
     {% for quiz in response %}
         <div align="center">
             <h3><a href="/quiz/{{quiz[0]}}"> {{quiz[0]}} </a></h3>
@@ -20,7 +19,7 @@
     {% endfor %}
 
 <form method="POST" action="">
-    <button type="button" name="new_quiz">Add Quiz</button>
+    <p><input type = "submit" value = "Add Quiz" /></p>
 </form>
 </body>
 </html>
